# flake8-cmk-addons

./: .flake8  README.md  pyproject.toml
flake8_cmk_addons/: errors.py  plugin.py  visitor.py
tests/: test_CA001_entry_point.py
tests/unit/: test_visitor.py
